@@ -1,3 +1,6 @@
+2023-04-04  Markus Gans  <guru.mail@muenster.de>
+	* Avoid printing scrollbar overrun on emit callback
+
 2023-04-02  Markus Gans  <guru.mail@muenster.de>
 	* Implementation of the mouse selection in the FTextView. Can be 
 	  activated by setSelectable()
